resolve deprecations