@@ -3,7 +3,12 @@ package org.febit.wit.util;
 
 import org.febit.wit.exceptions.UncheckedException;
 
-import java.lang.reflect.*;
+import java.lang.reflect.AccessibleObject;
+import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Member;
+import java.lang.reflect.Method;
+import java.lang.reflect.Modifier;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.Map;
@@ -277,8 +282,8 @@ public class ClassUtil {
 
     public static Object newInstance(final Class<?> type) {
         try {
-            return type.newInstance();
-        } catch (InstantiationException | IllegalAccessException ex) {
+            return type.getConstructor().newInstance();
+        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException ex) {
             throw new UncheckedException(ex);
         }
     }
